{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 149,
  "lineage": "5f0ec26b-02a4-9c4c-15b2-4178970791d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "satellite_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6f208613a966166",
            "arn": "arn:aws:ec2:us-east-1:461593447802:elastic-ip/eipalloc-0a6f208613a966166",
            "association_id": "eipassoc-0016a84414b5c0f52",
            "domain": "vpc",
            "id": "eipalloc-0a6f208613a966166",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04a195a48e410df75",
            "private_dns": "ip-10-20-1-67.ec2.internal",
            "private_ip": "10.20.1.67",
            "public_dns": "ec2-34-237-225-249.compute-1.amazonaws.com",
            "public_ip": "34.237.225.249",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "satellite-nat-eip01"
            },
            "tags_all": {
              "Name": "satellite-nat-eip01"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "satellite_bastion_host_ec2_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:461593447802:instance/i-0e2b6e6ffdc3aa517",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "satellite-instance-profile01",
            "id": "i-0e2b6e6ffdc3aa517",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-053ac2ce42f458e62"
              }
            ],
            "primary_network_interface_id": "eni-053ac2ce42f458e62",
            "private_dns": "ip-10-20-1-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.156",
            "public_dns": "ec2-3-89-220-15.compute-1.amazonaws.com",
            "public_ip": "3.89.220.15",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0737d8712a7b076d0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011effd00b7ee8030",
            "tags": {
              "Name": "satellite-bastion-host"
            },
            "tags_all": {
              "Name": "satellite-bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf2819a7612265fb"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.satellite_instance_profile01",
            "aws_iam_role.satellite_ec2_role01",
            "aws_security_group.satellite_ec2_sg02",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "satellite_ec201_private_bonus_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:461593447802:instance/i-07ba103ad8e045463",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "satellite-instance-profile01",
            "id": "i-07ba103ad8e045463",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bf67e85d5717f855"
              }
            ],
            "primary_network_interface_id": "eni-0bf67e85d5717f855",
            "private_dns": "ip-10-20-11-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.11.142",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b0738bd7986c7d6c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d12c07385b56b915"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0667bd7c0b6e51376",
            "tags": {
              "Name": "satellite-ec201-private-bonus-labs_A"
            },
            "tags_all": {
              "Name": "satellite-ec201-private-bonus-labs_A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-06d48647bcf43cbc4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.satellite_instance_profile01",
            "aws_security_group.satellite_alb_sg01",
            "aws_security_group.satellite_ec2_sg01",
            "aws_subnet.satellite_private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "satellite_ec2_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:461593447802:instance/i-06b8d48a08d6e7949",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "satellite-instance-profile01",
            "id": "i-06b8d48a08d6e7949",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09b16da3075d805ad"
              }
            ],
            "primary_network_interface_id": "eni-09b16da3075d805ad",
            "private_dns": "ip-10-20-1-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.233",
            "public_dns": "ec2-174-129-80-41.compute-1.amazonaws.com",
            "public_ip": "174.129.80.41",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f8f3fb8118eb1665",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011effd00b7ee8030",
            "tags": {
              "Name": "satellite-ec2_01-public-lab1A"
            },
            "tags_all": {
              "Name": "satellite-ec2_01-public-lab1A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-06d48647bcf43cbc4"
            ]
          },
          "dependencies": [
            "aws_db_instance.satellite_rds01",
            "aws_db_subnet_group.satellite_rds_subnet_group01",
            "aws_iam_instance_profile.satellite_instance_profile01",
            "aws_iam_role.satellite_ec2_role01",
            "aws_security_group.satellite_ec2_sg01",
            "aws_security_group.satellite_rds_sg01",
            "aws_subnet.satellite_private_subnets",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "satellite_ec_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:461593447802:instance/i-0b9b62691e419175f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "satellite-instance-profile01",
            "id": "i-0b9b62691e419175f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0af43bce94b9a9ecc"
              }
            ],
            "primary_network_interface_id": "eni-0af43bce94b9a9ecc",
            "private_dns": "ip-10-20-11-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.11.77",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05ed6634e2ee1c4a0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0667bd7c0b6e51376",
            "tags": {
              "Name": "satellite-ec2_03-private"
            },
            "tags_all": {
              "Name": "satellite-ec2_03-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf2819a7612265fb"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.satellite_instance_profile01",
            "aws_iam_role.satellite_ec2_role01",
            "aws_security_group.satellite_ec2_sg02",
            "aws_subnet.satellite_private_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "satellite_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:internet-gateway/igw-05dedd0100289cfd4",
            "id": "igw-05dedd0100289cfd4",
            "owner_id": "461593447802",
            "region": "us-east-1",
            "tags": {
              "Name": "satellite-igw01"
            },
            "tags_all": {
              "Name": "satellite-igw01"
            },
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "satellite_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:loadbalancer/app/satellite-alb01/957f59cef254beab",
            "arn_suffix": "app/satellite-alb01/957f59cef254beab",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "satellite-alb01-82628472.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:461593447802:loadbalancer/app/satellite-alb01/957f59cef254beab",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "satellite-alb01",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0d12c07385b56b915"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-011effd00b7ee8030"
              },
              {
                "subnet_id": "subnet-0be8eb41b570cfdac"
              }
            ],
            "subnets": [
              "subnet-011effd00b7ee8030",
              "subnet-0be8eb41b570cfdac"
            ],
            "tags": {
              "Name": "satellite-alb01"
            },
            "tags_all": {
              "Name": "satellite-alb01"
            },
            "vpc_id": "vpc-0d78c4dcfa62cd73c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.satellite_alb_sg01",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "satellite_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:listener/app/satellite-alb01/957f59cef254beab/3125f7099814a11b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:461593447802:listener/app/satellite-alb01/957f59cef254beab/3125f7099814a11b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:loadbalancer/app/satellite-alb01/957f59cef254beab",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.satellite_alb01",
            "aws_security_group.satellite_alb_sg01",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "satellite_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:listener/app/satellite-alb01/957f59cef254beab/2d273ea5252b9614",
            "certificate_arn": "arn:aws:acm:us-east-1:461593447802:certificate/63c5040c-1a5c-44cb-ae3b-4c71cea1d0a8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:targetgroup/satellite-tg01/41ab4da6c162ecc3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:461593447802:listener/app/satellite-alb01/957f59cef254beab/2d273ea5252b9614",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:loadbalancer/app/satellite-alb01/957f59cef254beab",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.satellite_acm_cert01",
            "aws_lb.satellite_alb01",
            "aws_lb_target_group.satellite_tg01",
            "aws_security_group.satellite_alb_sg01",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "satellite_default_block01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:listener-rule/app/satellite-alb01/957f59cef254beab/2d273ea5252b9614/d60d5117d0a066b3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:461593447802:listener-rule/app/satellite-alb01/957f59cef254beab/2d273ea5252b9614/d60d5117d0a066b3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:listener/app/satellite-alb01/957f59cef254beab/2d273ea5252b9614",
            "priority": 99,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.satellite_acm_cert01",
            "aws_lb.satellite_alb01",
            "aws_lb_listener.satellite_https_listener01",
            "aws_lb_target_group.satellite_tg01",
            "aws_security_group.satellite_alb_sg01",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "satellite_require_origin_header01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:targetgroup/satellite-tg01/41ab4da6c162ecc3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:listener-rule/app/satellite-alb01/957f59cef254beab/2d273ea5252b9614/c4c2ba9a61ed6d8f",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-satellite-Growl",
                    "values": [
                      "UJz5ZbdvItGcONOu8Z6GQtRG8ACANIVr"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:461593447802:listener-rule/app/satellite-alb01/957f59cef254beab/2d273ea5252b9614/c4c2ba9a61ed6d8f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:listener/app/satellite-alb01/957f59cef254beab/2d273ea5252b9614",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "dependencies": [
            "aws_acm_certificate.satellite_acm_cert01",
            "aws_lb.satellite_alb01",
            "aws_lb_listener.satellite_https_listener01",
            "aws_lb_target_group.satellite_tg01",
            "aws_security_group.satellite_alb_sg01",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01",
            "random_password.satellite_origin_header_value01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "satellite_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:targetgroup/satellite-tg01/41ab4da6c162ecc3",
            "arn_suffix": "targetgroup/satellite-tg01/41ab4da6c162ecc3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:461593447802:targetgroup/satellite-tg01/41ab4da6c162ecc3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:461593447802:loadbalancer/app/satellite-alb01/957f59cef254beab"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "satellite-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "satellite-tg01"
            },
            "tags_all": {
              "Name": "satellite-tg01"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "satellite_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:461593447802:targetgroup/satellite-tg01/41ab4da6c162ecc3-20260125214439912400000002",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:461593447802:targetgroup/satellite-tg01/41ab4da6c162ecc3",
            "target_id": "i-07ba103ad8e045463"
          },
          "dependencies": [
            "aws_iam_instance_profile.satellite_instance_profile01",
            "aws_instance.satellite_ec201_private_bonus_A",
            "aws_lb_target_group.satellite_tg01",
            "aws_security_group.satellite_alb_sg01",
            "aws_security_group.satellite_ec2_sg01",
            "aws_subnet.satellite_private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "satellite_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6f208613a966166",
            "association_id": "eipassoc-0016a84414b5c0f52",
            "connectivity_type": "public",
            "id": "nat-09dc80e093249a77c",
            "network_interface_id": "eni-04a195a48e410df75",
            "private_ip": "10.20.1.67",
            "public_ip": "34.237.225.249",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-011effd00b7ee8030",
            "tags": {
              "Name": "satellite-nat01"
            },
            "tags_all": {
              "Name": "satellite-nat01"
            }
          },
          "dependencies": [
            "aws_eip.satellite_nat_eip01",
            "aws_internet_gateway.satellite_igw01",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "satellite_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09345de0967ac206f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09dc80e093249a77c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09345de0967ac206f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.satellite_nat_eip01",
            "aws_internet_gateway.satellite_igw01",
            "aws_nat_gateway.satellite_nat01",
            "aws_route_table.satellite_private_rt01",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "satellite_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05dedd0100289cfd4",
            "id": "r-rtb-0f54795f191bf81461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f54795f191bf8146",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.satellite_igw01",
            "aws_route_table.satellite_public_rt01",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "satellite_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:route-table/rtb-09345de0967ac206f",
            "id": "rtb-09345de0967ac206f",
            "owner_id": "461593447802",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09dc80e093249a77c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "satellite-private-rt01"
            },
            "tags_all": {
              "Name": "satellite-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "satellite_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:route-table/rtb-0f54795f191bf8146",
            "id": "rtb-0f54795f191bf8146",
            "owner_id": "461593447802",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05dedd0100289cfd4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "satellite-public-rt01"
            },
            "tags_all": {
              "Name": "satellite-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "satellite_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093b8d1fa0777c198",
            "region": "us-east-1",
            "route_table_id": "rtb-09345de0967ac206f",
            "subnet_id": "subnet-0667bd7c0b6e51376"
          },
          "dependencies": [
            "aws_route_table.satellite_private_rt01",
            "aws_subnet.satellite_private_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7131716cdc41825",
            "region": "us-east-1",
            "route_table_id": "rtb-09345de0967ac206f",
            "subnet_id": "subnet-0a42c3092cdf6fa0c"
          },
          "dependencies": [
            "aws_route_table.satellite_private_rt01",
            "aws_subnet.satellite_private_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "satellite_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5773a0c7637878d",
            "region": "us-east-1",
            "route_table_id": "rtb-0f54795f191bf8146",
            "subnet_id": "subnet-011effd00b7ee8030"
          },
          "dependencies": [
            "aws_route_table.satellite_public_rt01",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da6408b25d87938e",
            "region": "us-east-1",
            "route_table_id": "rtb-0f54795f191bf8146",
            "subnet_id": "subnet-0be8eb41b570cfdac"
          },
          "dependencies": [
            "aws_route_table.satellite_public_rt01",
            "aws_subnet.satellite_public_subnets",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "satellite_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:security-group/sg-0d12c07385b56b915",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d48647bcf43cbc4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0d12c07385b56b915",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-3b927c52"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "satellite-alb-sg01",
            "name_prefix": "",
            "owner_id": "461593447802",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "satellite-alb-sg01"
            },
            "tags_all": {
              "Name": "satellite-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "satellite_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:security-group/sg-06d48647bcf43cbc4",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d48647bcf43cbc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "satellite-ec2-sg01",
            "name_prefix": "",
            "owner_id": "461593447802",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "satellite-ec2-sg01"
            },
            "tags_all": {
              "Name": "satellite-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "satellite_ec2_sg02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:security-group/sg-0cf2819a7612265fb",
            "description": "EC2 app security group",
            "egress": [],
            "id": "sg-0cf2819a7612265fb",
            "ingress": [],
            "name": "satellite-ec2-sg02",
            "name_prefix": "",
            "owner_id": "461593447802",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "satellite-ec2-sg02"
            },
            "tags_all": {
              "Name": "satellite-ec2-sg02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "satellite_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:security-group/sg-05ee8d36b01a693f3",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-05ee8d36b01a693f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d48647bcf43cbc4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "satellite-rds-sg01",
            "name_prefix": "",
            "owner_id": "461593447802",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "satellite-rds-sg01"
            },
            "tags_all": {
              "Name": "satellite-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "satellite_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:security-group/sg-02b91410a21f837dc",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-02b91410a21f837dc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d48647bcf43cbc4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "satellite-vpce-sg01",
            "name_prefix": "",
            "owner_id": "461593447802",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "satellite-vpce-sg01"
            },
            "tags_all": {
              "Name": "satellite-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "satellite_alb_ingress_cf44301",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1512086838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-3b927c52"
            ],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d12c07385b56b915",
            "security_group_rule_id": "sgr-0f226ffa82205badf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.satellite_alb_sg01",
            "aws_vpc.satellite_vpc01",
            "data.aws_ec2_managed_prefix_list.satellite_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "satellite_vpce_sg_ingress_https_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1196247493",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-02b91410a21f837dc",
            "security_group_rule_id": "sgr-0f728e5f641b9abb7",
            "self": false,
            "source_security_group_id": "sg-06d48647bcf43cbc4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.satellite_ec2_sg01",
            "aws_security_group.satellite_vpce_sg01",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "satellite_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:subnet/subnet-0667bd7c0b6e51376",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0667bd7c0b6e51376",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461593447802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "satellite-private-subnet01"
            },
            "tags_all": {
              "Name": "satellite-private-subnet01"
            },
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:subnet/subnet-0a42c3092cdf6fa0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a42c3092cdf6fa0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461593447802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "satellite-private-subnet02"
            },
            "tags_all": {
              "Name": "satellite-private-subnet02"
            },
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "satellite_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:subnet/subnet-011effd00b7ee8030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011effd00b7ee8030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461593447802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "satellite-public-subnet01"
            },
            "tags_all": {
              "Name": "satellite-public-subnet01"
            },
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:subnet/subnet-0be8eb41b570cfdac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be8eb41b570cfdac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461593447802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "satellite-public-subnet02"
            },
            "tags_all": {
              "Name": "satellite-public-subnet02"
            },
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "satellite_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:vpc/vpc-0d78c4dcfa62cd73c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0b938918762198639",
            "default_route_table_id": "rtb-0c98651f49770c6ab",
            "default_security_group_id": "sg-0f6036be566272d01",
            "dhcp_options_id": "dopt-08f5b7259861abae1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d78c4dcfa62cd73c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c98651f49770c6ab",
            "owner_id": "461593447802",
            "region": "us-east-1",
            "tags": {
              "Name": "satellite-vpc01"
            },
            "tags_all": {
              "Name": "satellite-vpc01"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "satellite_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:vpc-endpoint/vpce-055a6890979ce6308",
            "dns_entry": [
              {
                "dns_name": "vpce-055a6890979ce6308-d4bc5o2w.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-055a6890979ce6308-d4bc5o2w-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-055a6890979ce6308-d4bc5o2w-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0366233P64O8HGEW4TN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-055a6890979ce6308",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-068ebc5d43a868b90",
              "eni-09f1d57d8216bb3af"
            ],
            "owner_id": "461593447802",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91410a21f837dc"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.31",
                "subnet_id": "subnet-0667bd7c0b6e51376"
              },
              {
                "ipv4": "10.20.12.47",
                "subnet_id": "subnet-0a42c3092cdf6fa0c"
              }
            ],
            "subnet_ids": [
              "subnet-0667bd7c0b6e51376",
              "subnet-0a42c3092cdf6fa0c"
            ],
            "tags": {
              "Name": "satellite-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "satellite-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_security_group.satellite_vpce_sg01",
            "aws_subnet.satellite_private_subnets",
            "aws_vpc.satellite_vpc01",
            "data.aws_region.satellite_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "satellite_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:vpc-endpoint/vpce-0270d74e891423db0",
            "dns_entry": [
              {
                "dns_name": "vpce-0270d74e891423db0-q0s5dn6t.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0270d74e891423db0-q0s5dn6t-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0270d74e891423db0-q0s5dn6t-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z043625316NRHRLBCWXXS"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z03884852I0I2ODGIHBO9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0270d74e891423db0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-007bbe0f20f7781a3",
              "eni-03fc3a13238b1dc72"
            ],
            "owner_id": "461593447802",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91410a21f837dc"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.116",
                "subnet_id": "subnet-0667bd7c0b6e51376"
              },
              {
                "ipv4": "10.20.12.88",
                "subnet_id": "subnet-0a42c3092cdf6fa0c"
              }
            ],
            "subnet_ids": [
              "subnet-0667bd7c0b6e51376",
              "subnet-0a42c3092cdf6fa0c"
            ],
            "tags": {
              "Name": "satellite-vpce-kms01"
            },
            "tags_all": {
              "Name": "satellite-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_security_group.satellite_vpce_sg01",
            "aws_subnet.satellite_private_subnets",
            "aws_vpc.satellite_vpc01",
            "data.aws_region.satellite_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "satellite_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:vpc-endpoint/vpce-04a9b7488e5fbe469",
            "dns_entry": [
              {
                "dns_name": "vpce-04a9b7488e5fbe469-oo8yz212.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a9b7488e5fbe469-oo8yz212-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a9b7488e5fbe469-oo8yz212-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04341887WFMAYTKAS8A"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03880103D6M1BVHWY7DS"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z03251472SJX3GI2PQHGK"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z03648303K00YT0W6ZVSJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04a9b7488e5fbe469",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-001ec47dbefaab63c",
              "eni-0cbded9edf272259b"
            ],
            "owner_id": "461593447802",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91410a21f837dc"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.249",
                "subnet_id": "subnet-0667bd7c0b6e51376"
              },
              {
                "ipv4": "10.20.12.139",
                "subnet_id": "subnet-0a42c3092cdf6fa0c"
              }
            ],
            "subnet_ids": [
              "subnet-0667bd7c0b6e51376",
              "subnet-0a42c3092cdf6fa0c"
            ],
            "tags": {
              "Name": "satellite-vpce-logs01"
            },
            "tags_all": {
              "Name": "satellite-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_security_group.satellite_vpce_sg01",
            "aws_subnet.satellite_private_subnets",
            "aws_vpc.satellite_vpc01",
            "data.aws_region.satellite_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "satellite_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:vpc-endpoint/vpce-083378aac9bc262b6",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-083378aac9bc262b6",
            "ip_address_type": "ipv4",
            "owner_id": "461593447802",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "satellite-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "satellite-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_vpc.satellite_vpc01",
            "data.aws_region.satellite_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "satellite_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:vpc-endpoint/vpce-0f58d85eeae957945",
            "dns_entry": [
              {
                "dns_name": "vpce-0f58d85eeae957945-vgburx59.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f58d85eeae957945-vgburx59-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f58d85eeae957945-vgburx59-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04356251VE5CW9OSDJKA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f58d85eeae957945",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-066dff63441d90e1e",
              "eni-0c6fd6dabbd23f318"
            ],
            "owner_id": "461593447802",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91410a21f837dc"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.89",
                "subnet_id": "subnet-0667bd7c0b6e51376"
              },
              {
                "ipv4": "10.20.12.252",
                "subnet_id": "subnet-0a42c3092cdf6fa0c"
              }
            ],
            "subnet_ids": [
              "subnet-0667bd7c0b6e51376",
              "subnet-0a42c3092cdf6fa0c"
            ],
            "tags": {
              "Name": "satellite-vpce-secrets01"
            },
            "tags_all": {
              "Name": "satellite-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_security_group.satellite_vpce_sg01",
            "aws_subnet.satellite_private_subnets",
            "aws_vpc.satellite_vpc01",
            "data.aws_region.satellite_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "satellite_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:vpc-endpoint/vpce-023a1175a37eb4755",
            "dns_entry": [
              {
                "dns_name": "vpce-023a1175a37eb4755-pl6ig1zv.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-023a1175a37eb4755-pl6ig1zv-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-023a1175a37eb4755-pl6ig1zv-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01522862JWU7D405DUW7"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z04413495S5QHQQCNI8A"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-023a1175a37eb4755",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0036f3394d422279b",
              "eni-0c9c3e2b96a8a4df2"
            ],
            "owner_id": "461593447802",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91410a21f837dc"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.26",
                "subnet_id": "subnet-0667bd7c0b6e51376"
              },
              {
                "ipv4": "10.20.12.89",
                "subnet_id": "subnet-0a42c3092cdf6fa0c"
              }
            ],
            "subnet_ids": [
              "subnet-0667bd7c0b6e51376",
              "subnet-0a42c3092cdf6fa0c"
            ],
            "tags": {
              "Name": "satellite-vpce-ssm01"
            },
            "tags_all": {
              "Name": "satellite-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_security_group.satellite_vpce_sg01",
            "aws_subnet.satellite_private_subnets",
            "aws_vpc.satellite_vpc01",
            "data.aws_region.satellite_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "satellite_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:vpc-endpoint/vpce-0949dfb224ea8226b",
            "dns_entry": [
              {
                "dns_name": "vpce-0949dfb224ea8226b-1rpuiafe.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0949dfb224ea8226b-1rpuiafe-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0949dfb224ea8226b-1rpuiafe-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0435554CJYRKRLMJC09"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z03867471W866KA68IWD0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0949dfb224ea8226b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0051ad18c0614233c",
              "eni-0c3da6bad6f36857e"
            ],
            "owner_id": "461593447802",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91410a21f837dc"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.51",
                "subnet_id": "subnet-0667bd7c0b6e51376"
              },
              {
                "ipv4": "10.20.12.38",
                "subnet_id": "subnet-0a42c3092cdf6fa0c"
              }
            ],
            "subnet_ids": [
              "subnet-0667bd7c0b6e51376",
              "subnet-0a42c3092cdf6fa0c"
            ],
            "tags": {
              "Name": "satellite-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "satellite-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d78c4dcfa62cd73c"
          },
          "dependencies": [
            "aws_security_group.satellite_vpce_sg01",
            "aws_subnet.satellite_private_subnets",
            "aws_vpc.satellite_vpc01",
            "data.aws_region.satellite_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "satellite_alb_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:security-group-rule/sgr-0ddd68c5c4d27827c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ddd68c5c4d27827c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06d48647bcf43cbc4",
            "region": "us-east-1",
            "security_group_id": "sg-0d12c07385b56b915",
            "security_group_rule_id": "sgr-0ddd68c5c4d27827c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.satellite_tg01",
            "aws_security_group.satellite_alb_sg01",
            "aws_security_group.satellite_ec2_sg01",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "satellite_ec2_sg_egress_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:security-group-rule/sgr-02e7da63253345857",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-02e7da63253345857",
            "ip_protocol": "All",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-06d48647bcf43cbc4",
            "security_group_rule_id": "sgr-02e7da63253345857",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.satellite_ec2_sg01",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "satellite_ec2_sg_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:security-group-rule/sgr-005a6d35f9ffb9c30",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-005a6d35f9ffb9c30",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-06d48647bcf43cbc4",
            "security_group_rule_id": "sgr-005a6d35f9ffb9c30",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.satellite_ec2_sg01",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "satellite_rds_sg_ingress_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461593447802:security-group-rule/sgr-02a199aa7b74ce2a8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-02a199aa7b74ce2a8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06d48647bcf43cbc4",
            "region": "us-east-1",
            "security_group_id": "sg-05ee8d36b01a693f3",
            "security_group_rule_id": "sgr-02a199aa7b74ce2a8",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.satellite_ec2_sg01",
            "aws_security_group.satellite_rds_sg01",
            "aws_vpc.satellite_vpc01"
          ]
        }
      ]
    }
  ]
}